@@ -9,6 +9,9 @@
 	* libfuse: add store request.  Request data to be stored in the
 	kernel buffers for a given inode.
 
+	* libfuse: add retrieve request.  Retrieve data stored in the
+	kernel buffers for a given inode.
+
 2010-06-23  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Make the number of max background requests and congestion
